--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
         ports:
             - 3306:3306
         environment:
+            MYSQL_DATABASE: api
             MYSQL_USER: userapi
             MYSQL_PASSWORD_FILE: /run/secrets/db_password
             MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
