--- a/nginx.conf
+++ b/nginx.conf
@@ -3,20 +3,70 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
+
   server {
-    listen 80;
-    access_log off;
-    error_log off;
+      server_name carlosseda.com www.carlosseda.com;
 
-    location / {
-      proxy_pass http://app:8080;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      # pagespeed on;
+      # pagespeed RewriteLevel PassThrough;
 
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-    }
+      # pagespeed EnableFilters collapse_whitespace;
+      # pagespeed EnableFilters dedup_inlined_images;
+      # pagespeed EnableFilters extend_cache;
+      # pagespeed EnableFilters extend_cache_pdfs;
+      # pagespeed EnableFilters inline_preview_images;
+      # pagespeed EnableFilters insert_ga;
+      # pagespeed EnableFilters lazyload_images;
+      # pagespeed EnableFilters remove_comments;
+      # pagespeed EnableFilters rewrite_style_attributes;
+      # pagespeed EnableFilters rewrite_javascript;
+      # pagespeed EnableFilters prioritize_critical_css;
+
+      # pagespeed AnalyticsID G-EJRJZDD2BM;
+
+      # pagespeed FileCachePath /var/www/ngx_pagespeed_cache;
+      # pagespeed RespectVary off;
+
+      # location ~ "\.pagespeed\.([a-z]\.)?[a-z]{2}\.[^.]{10}\.[^.]+" {
+      #   add_header "" "";
+      # }
+
+      # location ~ "^/pagespeed_static/" { }
+      # location ~ "^/ngx_pagespeed_beacon$" { }
+      # pagespeed EnableCachePurge on;
+      # pagespeed PurgeMethod PURGE;
+
+      location / {
+          proxy_pass http://127.0.0.1:8080;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+          proxy_http_version 1.1;
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection "upgrade";
+      }
+
+      listen 443 ssl http2; 
+      ssl_certificate /etc/letsencrypt/live/carlosseda.com/fullchain.pem;
+      ssl_certificate_key /etc/letsencrypt/live/carlosseda.com/privkey.pem; 
+      include /etc/letsencrypt/options-ssl-nginx.conf; 
+      ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; 
+  }
+
+  server {
+      if ($host = www.carlosseda.com) {
+          return 301 https://$host$request_uri;
+      } 
+
+
+      if ($host = carlosseda.com) {
+          return 301 https://$host$request_uri;
+      } 
+
+
+      listen 80;
+      server_name carlosseda.com www.carlosseda.com;
+      return 404;
   }
 }
